--- a/frontend-web/pnpm-workspace.yaml
+++ b/frontend-web/pnpm-workspace.yaml
@@ -1,13 +1,2 @@
 packages:
-  - packages/*
-
-onlyBuiltDependencies:
-  - '@parcel/watcher'
-  - core-js
-  - core-js-pure
-  - es5-ext
-  - esbuild
-  - simple-git-hooks
-  - typeit
-  - unrs-resolver
-  - vue-demi
+  - "packages/*"
