Refactor backend routers to support asynchronous database operations
- Updated `stats.py` to use AsyncSession for executing queries and fetching results asynchronously.
- Modified `store.py` to implement async database calls, including store creation, retrieval, and updates.
- Enhanced `user.py` to handle user-related operations asynchronously, including registration, login, and profile updates.
- Added a new backup authentication router `auth_backup.py` for handling email verification and user authentication.
- Created test scripts `test_api_temp.py`, `test_fixed.py`, and `test_order_list.py` to validate API functionality and database queries.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,8 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asyncmy>=0.2.10",
+    "cryptography>=46.0.3",
     "fastapi[all]>=0.120.1",
-    "mysqlclient>=2.2.7",
     "passlib>=1.7.4",
     "pyjwt>=2.10.1",
     "sqlmodel>=0.0.27",
