--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -4,7 +4,7 @@
   "version": "3.18.9",
   "unibest-version": "3.18.9",
   "update-time": "2025-10-21",
-  "packageManager": "pnpm@10.10.0",
+  "packageManager": "pnpm@10.23.0+sha512.21c4e5698002ade97e4efe8b8b4a89a8de3c85a37919f957e7a0f30f38fbc5bbdd05980ffe29179b2fb6e6e691242e098d945d1601772cad0fef5fb6411e2a4b",
   "description": "unibest - 最好的 uniapp 开发模板",
   "generate-time": "用户创建项目时生成",
   "author": {
@@ -97,44 +97,46 @@
   "dependencies": {
     "@alova/adapter-uniapp": "^2.0.14",
     "@alova/shared": "^1.3.1",
-    "@dcloudio/uni-app": "3.0.0-4070620250821001",
-    "@dcloudio/uni-app-harmony": "3.0.0-4070620250821001",
-    "@dcloudio/uni-app-plus": "3.0.0-4070620250821001",
-    "@dcloudio/uni-components": "3.0.0-4070620250821001",
-    "@dcloudio/uni-h5": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-harmony": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-jd": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-lark": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-qq": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-4070620250821001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-4070620250821001",
+    "@dcloudio/uni-app": "3.0.0-4080520251106001",
+    "@dcloudio/uni-app-harmony": "3.0.0-4080520251106001",
+    "@dcloudio/uni-app-plus": "3.0.0-4080520251106001",
+    "@dcloudio/uni-components": "3.0.0-4080520251106001",
+    "@dcloudio/uni-h5": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-harmony": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-jd": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-lark": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-qq": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-4080520251106001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-4080520251106001",
     "abortcontroller-polyfill": "^1.7.8",
     "alova": "^3.3.4",
     "dayjs": "1.11.10",
     "js-cookie": "^3.0.5",
     "pinia": "2.0.36",
     "pinia-plugin-persistedstate": "3.2.1",
-    "uview-pro": "^0.3.15",
+    "uview-pro": "^0.3.16",
+    "vue": "^3.4.21",
+    "vue-i18n": "^9.1.9",
     "vue-router": "4.5.1",
     "z-paging": "2.8.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
-    "@dcloudio/types": "^3.4.28",
-    "@dcloudio/uni-automator": "3.0.0-4070620250821001",
-    "@dcloudio/uni-cli-shared": "3.0.0-4070620250821001",
-    "@dcloudio/uni-stacktracey": "3.0.0-4070620250821001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4070620250821001",
+    "@dcloudio/types": "^3.4.8",
+    "@dcloudio/uni-automator": "3.0.0-4080520251106001",
+    "@dcloudio/uni-cli-shared": "3.0.0-4080520251106001",
+    "@dcloudio/uni-stacktracey": "3.0.0-4080520251106001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4080520251106001",
     "@esbuild/darwin-arm64": "0.20.2",
     "@esbuild/darwin-x64": "0.20.2",
     "@iconify-json/carbon": "^1.2.14",
-    "@rollup/rollup-darwin-x64": "^4.53.2",
+    "@rollup/rollup-darwin-x64": "^4.53.3",
     "@types/node": "^20.19.25",
     "@uni-helper/eslint-config": "0.5.0",
     "@uni-helper/plugin-uni": "0.1.0",
@@ -148,9 +150,9 @@
     "@uni-helper/vite-plugin-uni-platform": "0.0.5",
     "@uni-ku/bundle-optimizer": "1.3.15-beta.2",
     "@uni-ku/root": "1.4.1",
-    "@unocss/eslint-plugin": "^66.5.6",
+    "@unocss/eslint-plugin": "^66.5.9",
     "@unocss/preset-legacy-compat": "66.0.0",
-    "@vue/runtime-core": "^3.5.24",
+    "@vue/runtime-core": "^3.4.21",
     "@vue/tsconfig": "^0.1.3",
     "autoprefixer": "^10.4.22",
     "cross-env": "^10.1.0",
@@ -171,7 +173,7 @@
     "unplugin-auto-import": "^20.2.0",
     "vite": "5.2.8",
     "vite-plugin-restart": "^1.0.0",
-    "vue-tsc": "^3.1.4"
+    "vue-tsc": "^3.1.5"
   },
   "pnpm": {
     "overrides": {
