--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -93,6 +93,7 @@
   },
   "devDependencies": {
     "@amap/amap-jsapi-types": "0.0.15",
+    "@babel/parser": "^7.28.5",
     "@elegant-router/vue": "0.3.8",
     "@iconify/json": "2.2.380",
     "@sa/scripts": "workspace:*",
